--- a/sidebar/styles.css
+++ b/sidebar/styles.css
@@ -20,13 +20,13 @@ body {
     height: 100vh;
     width: 180px;
     position: absolute;
-    background-color: #ffffff; 
+    background-color:   #23232e; 
     transition: 0.5s;
     transform: translateX(-180px);
 }
 
 h1 {
-    color: #8000ff;
+    color: #fff;
     font-weight: 800;
     text-align: right;
     padding: 10px 0;
@@ -39,7 +39,8 @@ ul li {
 }
 
 ul li a {
-    color: #011a41;
+    margin-top: 15px;
+    color: #fff ;
     font-weight: 500;
     padding: 5px 0;
     display: block;
@@ -49,8 +50,7 @@ ul li a {
 }
 
 ul li:hover a {
-    color: #fff;
-    background-color: #8000ff;
+    opacity: 0.7;
 }
 
 ul li a i {
@@ -79,7 +79,7 @@ input {
     position: absolute;
     height: 2px;
     width: 20px;
-    background-color: #8000ff;
+    background-color: #23232e;
     border-radius: 50px;
     transition: 0.3s ease;
     
