--- a/sidebar/styles.css
+++ b/sidebar/styles.css
@@ -50,7 +50,9 @@ ul li a {
 }
 
 ul li:hover a {
-    opacity: 0.7;
+    color: #23232e;
+    background-color: #f2f2f2;
+    border-radius: 5px;
 }
 
 ul li a i {
